# device_platform

./: .env  Cargo.toml  Makefile  README.md
src/: main.rs
src/application/ports/: app.rs  mod.rs
src/application/ports/inbound/: action_service.rs  device_service.rs  device_state_service.rs  event_service.rs  mod.rs
src/application/ports/outbound/: action_repository.rs  device_repository.rs  device_state_repository.rs  event_repository.rs
src/application/usecases/: manage_action.rs  manage_device.rs  manage_device_state.rs  manage_event.rs  mod.rs
src/domain/: device.rs  event.rs  mod.rs  state.rs
src/domain/action/: action.rs  action_data_type.rs  action_data_value.rs  action_emittable.rs  action_format.rs  mod.rs
src/domain/event/: event.rs  event_data_type.rs  event_data_value.rs  event_emittable.rs  event_format.rs  mod.rs
src/infrastructure/: mod.rs  utils.rs
src/infrastructure/app_inbound/: axum.rs  egui.rs  mod.rs  mqtt.rs  serial.rs
src/infrastructure/app_outbound/: full_postgres.rs  in_memory.rs  mod.rs  mqtt_http.rs  mqtt_postgres.rs
src/infrastructure/db/: mod.rs
src/infrastructure/db/memory/: action_repository.rs  app_state.rs  device_repository.rs  device_state_repository.rs  event_repository.rs  mod.rs
src/infrastructure/db/postgres/: action_repository.rs  app_state.rs  device_repository.rs  device_state_repository.rs  event_repository.rs  mod.rs  utils.rs
src/infrastructure/http/: mod.rs
src/infrastructure/http/axum/: app.rs  device_handlers.rs  device_state_handlers.rs  error.rs  events_handlers.rs  mod.rs
src/infrastructure/http/axum/action_handlers/: create.rs  get.rs  mod.rs  types.rs
src/infrastructure/http/axum/device_handlers/: create.rs  delete.rs  get.rs  mod.rs  types.rs  update.rs  utils.rs
src/infrastructure/http/reqwest/: device_repository.rs  device_state_repository.rs  event_repository.rs  mod.rs  types.rs
src/infrastructure/mqtt/: mod.rs  mqtt_messages.rs
src/infrastructure/mqtt/inbound/: app.rs  device_handler.rs  device_state_handler.rs  error.rs  event_handler.rs  mod.rs
src/infrastructure/mqtt/outbound/: action_repository.rs  device_repository.rs  device_state_repository.rs  event_repository.rs  mod.rs
src/infrastructure/serial/: mod.rs
src/infrastructure/serial/inbound/: handle_event.rs  mod.rs
src/infrastructure/ui/: mod.rs
src/infrastructure/ui/inbound/: device_manager.rs  egui_app.rs  mod.rs
src/infrastructure/ui/inbound/managers/: device_manager.rs  device_state_manager.rs  mod.rs
src/infrastructure/ui/inbound/panels/: device_state_panel.rs  devices_panel.rs  mod.rs
src/infrastructure/ui/inbound/widgets/: gauge.rs
