[package]
name = "dp-back"
version = "0.1.0"
edition = "2024"

# Build with mqtt and postgres features enabled
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false


[features]
default = ["axum_inbound", "postgres_outbound"]

axum_inbound = ["axum"]
mqtt_inbound = ["mqtt"]
egui_inbound = ["egui"]
serial_inbound = ["serial"]

mqtt_server_outbound = ["mqtt_outbound", "postgres"]
mqtt_client_outbound = ["mqtt_outbound", "reqwest"]
mqtt_outbound = ["mqtt"]
postgres_outbound = ["postgres"]
in_memory_outbound = ["in_memory"]

axum = ["dep:axum"]
mqtt = ["dep:rumqttc"]
in_memory = []
reqwest = ["dep:reqwest"]
postgres = ["dep:sqlx"]
egui = ["dep:egui", "dep:eframe"]
serial = ["dep:serialport"]

[dependencies]
axum = {version = "0.8.4", optional = true}
chrono = {version="0.4.41", features = ["serde"] }
dotenv = "0.15.0"
eframe = {version="0.32.0", optional = true}
egui = {version="0.32.0", optional = true}
reqwest = {version="0.12.20", features = ["json"], optional = true}
rumqttc = {version="0.24.0", optional = true}
serde = {version="1.0.219", features = ["derive", "serde_derive"]}
serde_json = "1.0.140"
serialport = {version = "4.7.2", optional = true}
sqlx = {version="0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"], optional = true}
tokio = {version="1.45.1", features = ["full"]}
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = "0.3.19"
uuid = {version="1.17.0", features = ["v4", "serde"]}
